--- a/css/style.css
+++ b/css/style.css
@@ -153,18 +153,13 @@ svg {
   fill: currentColor;
 }
 
-/* (Probándolo, no usar en producción) En el caso de añadir una  */
-/* p svg{
-  display: inline;
-  width: initial;
-} */
+
 /* Configuramos la tipografía para toda la web */
 body {
   min-height: 100vh;
   font-size: 100%;
   font-family: var(--tipo-principal);
-  color: var(--negro);
-  /* opcional */
+  color: white;  /* opcional */
   line-height: 1.4em;
   /* opcional */
   -webkit-hyphens: auto;
@@ -176,14 +171,21 @@ body {
   -webkit-font-smoothing: antialiased;
   /* opcional */
   -moz-osx-font-smoothing: grayscale;
-  background-color: #e0e0e0;
+  background-color: black;
 
   display: flex;
-  flex-flow: row;
+  flex-direction: column;
+  /* flex-flow: row; */
   justify-content: center;
   align-items: center;
 }
 
+h1{
+  font-family: 'Roboto Mono', monospace;
+  width: 100%;
+  font-size: 2rem;
+  text-align: center;
+}
 .grid {
   width: 90%;
   max-width: 56.25rem;
@@ -198,7 +200,7 @@ body {
 
 .grid .img {
   background-color: #e9dcbe;
-  box-shadow: .5rem .5rem 2rem #bebebe, -0.5rem -0.5rem 2rem #ffffff;
+  box-shadow: .5rem .5rem 2rem #181818, -0.5rem -0.5rem 2rem #55555515;
   cursor: pointer;
   transition: all 0.5s;
 }
@@ -255,5 +257,5 @@ body {
     width: 90%;
     max-width: 900px;
     height: 80vh;
-    box-shadow: 0 0 1rem 0 rgba(0,0,0,.4);
+    box-shadow: 0 0 1rem 0 rgba(143, 142, 142, 0.623);
 }
